objects/ASI_GnH_Route_Rule_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_GnH_Approver_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_GnH_Route_Rule_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Approver_Type__c</fullName>
        <label>Approver Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Line Manager</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GnH_Route_Type__c</fullName>
        <label>ASI GnH Route Type</label>
        <referenceTo>ASI_GnH_Route_Type__c</referenceTo>
        <relationshipLabel>ASI GnH Route Rule Details</relationshipLabel>
        <relationshipName>ASI_GnH_Route_Rule_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Threshold_Amount__c</fullName>
        <formula>ASI_GnH_Threshold__r.ASI_GnH_Threshold_Amount__c</formula>
        <label>ASI GnH Threshold Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Threshold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ASI GnH Threshold</label>
        <referenceTo>ASI_GnH_Threshold__c</referenceTo>
        <relationshipLabel>ASI GnH Route Rule Details</relationshipLabel>
        <relationshipName>ASI_GnH_Route_Rule_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ASI GnH Route Rule Detail</label>
    <nameField>
        <displayFormat>RRID{000000}</displayFormat>
        <label>ASI GnH Route Rule Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI GnH Route Rule Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_GnH_KR_Route_Rule_Detail</fullName>
        <active>true</active>
        <label>ASI GnH KR Route Rule Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_GnH_TW_Route_Rule_Detail</fullName>
        <active>true</active>
        <label>ASI GnH TW Route Rule Detail</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>